trunk/tests/jastadd/positive/L3/MinusMinus.ob
MODULE TestModule;
BEGIN
    Write(-(-(1)));
    WriteLn
END TestModule.
