trunk/tests/jastadd/negative/type_errors/L3/4_PredefinedProcPars2.ob
MODULE TestModule;
BEGIN
	Write(1);     (* OK *)
	Write(1 < 2)  (* NOT OK *)
END TestModule.
